--- a/app/src/main/res/layout/fragment_add_property.xml
+++ b/app/src/main/res/layout/fragment_add_property.xml
@@ -71,7 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="2"
+            android:weightSum="3"
             android:background="@color/secondaryBackground"
             android:layout_marginHorizontal="20dp"
             app:layout_constraintTop_toBottomOf="@id/cancel"
@@ -112,16 +112,17 @@
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
-                android:id="@+id/roomsAndAmenities"
-                android:layout_width="wrap_content"
+                android:id="@+id/propertyImages"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/secondary"
-                android:text="Rooms &amp; Amenities"
+                android:textColor="@color/lightBlack"
+                android:text="Images"
                 android:textAlignment="center"
-                android:textSize="@dimen/H4"
-                android:paddingVertical="5dp"
                 android:background="@drawable/corner_top_grey_background"
-                android:visibility="gone"
+                android:layout_weight="1"
+                android:textSize="@dimen/H5"
+                android:paddingVertical="10dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="15dp"
                 android:fontFamily="@font/roboto"
                 app:layout_constraintTop_toTopOf="parent"
@@ -407,13 +408,58 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/roboto_medium"
+                            android:paddingVertical="5dp"
+                            android:text="Property’s Description"
+                            android:textAlignment="center"
+                            android:textColor="@color/secondary"
+                            android:textSize="@dimen/H4" />
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            style="@style/CardViewTheme"
+                            android:layout_marginVertical="8dp"
+                            android:layout_marginHorizontal="3dp"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="2dp">
+
+                            <EditText
+                                android:id="@+id/descriptionET"
+                                style="@style/TextAppearance.AppCompat.Body1"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@null"
+                                android:gravity="start"
+                                android:hint="Describe the room"
+                                android:maxHeight="180dp"
+                                android:minHeight="120dp"
+                                android:padding="8dp"
+                                android:textSize="@dimen/H5" />
+
+                        </androidx.cardview.widget.CardView>
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
                 <TextView
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="15dp"
                     android:fontFamily="@font/roboto_medium"
                     android:text="Property Amenities"
                     android:textColor="@color/secondary"
@@ -425,7 +471,7 @@
                     android:id="@+id/add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="15dp"
                     android:layout_marginEnd="5dp"
                     android:fontFamily="@font/roboto_medium"
                     android:paddingVertical="5dp"
@@ -456,88 +502,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/frame1"
                 app:layout_constraintTop_toTopOf="parent">
-
-                <LinearLayout
-                    android:id="@+id/ll3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="45dp"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="15dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/roboto_medium"
-                        android:paddingVertical="5dp"
-                        android:text="Property’s Description"
-                        android:textAlignment="center"
-                        android:textColor="@color/secondary"
-                        android:textSize="@dimen/H4" />
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginHorizontal="20dp"
-                        android:layout_marginVertical="8dp"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="2dp">
-
-                        <EditText
-                            android:id="@+id/descriptionET"
-                            style="@style/TextAppearance.AppCompat.Body1"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@null"
-                            android:gravity="start"
-                            android:hint="Describe the room"
-                            android:maxHeight="180dp"
-                            android:minHeight="120dp"
-                            android:padding="8dp"
-                            android:textSize="@dimen/H5" />
-
-                    </androidx.cardview.widget.CardView>
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/imagesT"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="Images"
-                    android:textColor="@color/secondary"
-                    android:textSize="@dimen/H4"
-                    app:layout_constraintStart_toStartOf="@id/ll3"
-                    app:layout_constraintTop_toBottomOf="@id/ll3" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:fontFamily="@font/roboto"
-                    android:text="Max 2 MB per image, Upto 10 images"
-                    android:textColor="@color/secondary"
-                    android:textSize="@dimen/H6"
-                    app:layout_constraintBottom_toBottomOf="@id/imagesT"
-                    app:layout_constraintStart_toEndOf="@id/imagesT" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/imagesRecycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="20dp"
-                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                    app:layout_constraintTop_toBottomOf="@id/imagesT"
-                    app:spanCount="5"
-                    tools:listitem="@layout/item_image" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -891,6 +855,18 @@
        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <FrameLayout
+            android:id="@+id/propertyImagesFrameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            android:paddingBottom="12dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:background="@drawable/corner_bottom_white_background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ll"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
