--- a/app/src/main/res/layout/item_add_image.xml
+++ b/app/src/main/res/layout/item_add_image.xml
@@ -8,12 +8,11 @@
     <androidx.cardview.widget.CardView
         android:layout_width="70dp"
         android:layout_height="70dp"
+        style="@style/CardViewTheme"
         app:cardCornerRadius="10dp"
         android:layout_margin="3dp"
-        style="@style/CardViewTheme"
-        app:cardElevation="1dp"
+        android:layout_marginStart="10dp"
         app:cardBackgroundColor="@color/unselectedBackground"
-        android:background="@drawable/svg_add_plus"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,22 +21,63 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_gravity="center">
+            android:orientation="vertical"
+            android:gravity="center">
 
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_gravity="center"
-            android:src="@drawable/svg_add_plus"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/img"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/img" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:src="@drawable/svg_upload_img"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_medium"
+                android:text="Add Image"
+                android:layout_marginTop="4dp"
+                android:textColor="@color/secondary"
+                android:textSize="@dimen/H7"/>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+
+    <!--
+        <androidx.cardview.widget.CardView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            app:cardCornerRadius="10dp"
+            android:layout_margin="3dp"
+            style="@style/CardViewTheme"
+            app:cardElevation="1dp"
+            app:cardBackgroundColor="@color/unselectedBackground"
+            android:background="@drawable/svg_add_plus"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_gravity="center">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:src="@drawable/svg_add_plus"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/img"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/img" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+    -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
