--- a/app/src/main/res/layout/fragment_dashboard_mobile.xml
+++ b/app/src/main/res/layout/fragment_dashboard_mobile.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Mobile.DashboardFragmentMobile">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     <androidx.cardview.widget.CardView
         android:id="@+id/cv1"
         android:layout_width="0dp"
@@ -299,8 +306,8 @@
         android:text="Recent Reservation"
         android:textColor="@color/secondary"
         android:textSize="@dimen/H5"
-        android:layout_marginTop="9dp"
-        android:fontFamily="@font/roboto_medium"/>
+        android:fontFamily="@font/roboto_medium"
+        android:layout_marginTop="9dp"/>
 
     <TextView
         android:id="@+id/view_all"
@@ -317,18 +324,312 @@
         android:id="@+id/reservation_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="horizontal"
+        tools:listitem="@layout/item_recycler_reservation"
         app:layout_constraintTop_toBottomOf="@id/view_all"/>
+    <TextView
+        android:id="@+id/txt_quick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/reservation_recycler"
+        app:layout_constraintStart_toStartOf="@id/cv4"
+        android:text="Quick Stats"
+        android:textColor="@color/secondary"
+        android:textSize="@dimen/H5"
+        android:fontFamily="@font/roboto_medium"/>
+    <LinearLayout
+        android:id="@+id/ll_quick"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt_quick">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="9dp"
+        android:weightSum="2">
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="9dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="9dp"
+            android:layout_weight="1"
+            app:cardElevation="6dp">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="9dp">
+                <TextView
+                    android:id="@+id/tv1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:text="ADR"
+                    android:layout_margin="12dp"/>
+                <ImageView
+                    android:id="@+id/img_info"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_margin="12dp"
+                    android:src="@drawable/svg_info"/>
+                <TextView
+                    android:id="@+id/price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/tv1"
+                    app:layout_constraintStart_toStartOf="@id/tv1"
+                    android:layout_marginTop="9dp"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:text="₹ 24,780.00"/>
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    app:layout_constraintTop_toTopOf="@id/price"
+                    app:layout_constraintBottom_toBottomOf="@id/price"
+                    app:layout_constraintEnd_toStartOf="@id/txt_percent"
+                    android:layout_marginEnd="4dp"
+                    android:src="@drawable/up_svg"/>
+                <TextView
+                    android:id="@+id/txt_percent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="@id/price"
+                    android:text="8%"
+                    android:textSize="@dimen/H6"
+                    app:layout_constraintEnd_toEndOf="@id/img_info"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="9dp"
+            android:layout_weight="1"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="9dp"
+            app:cardElevation="6dp">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="9dp">
+                <TextView
+                    android:id="@+id/t2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:text="RevPAR"
+                    android:layout_margin="12dp"/>
+                <ImageView
+                    android:id="@+id/img_info2"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_margin="12dp"
+                    android:src="@drawable/svg_info"/>
+                <TextView
+                    android:id="@+id/price2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/t2"
+                    app:layout_constraintStart_toStartOf="@id/t2"
+                    android:layout_marginTop="9dp"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:text="₹ 24,780.00"/>
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    app:layout_constraintTop_toTopOf="@id/price2"
+                    app:layout_constraintBottom_toBottomOf="@id/price2"
+                    app:layout_constraintEnd_toStartOf="@id/txt_percent2"
+                    android:layout_marginEnd="4dp"
+                    android:src="@drawable/up_svg"/>
+                <TextView
+                    android:id="@+id/txt_percent2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="@id/price2"
+                    android:text="8%"
+                    android:textSize="@dimen/H6"
+                    app:layout_constraintEnd_toEndOf="@id/img_info2"/>
 
 
-
-
-
-
-
-
-
-
-
-
-
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="9dp"
+        android:weightSum="2">
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="9dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="9dp"
+            android:layout_weight="1"
+            app:cardElevation="6dp">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="9dp">
+                <TextView
+                    android:id="@+id/tv2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:text="Avg. LOS"
+                    android:layout_margin="12dp"/>
+                <ImageView
+                    android:id="@+id/img_info_2"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_margin="12dp"
+                    android:src="@drawable/svg_info"/>
+                <TextView
+                    android:id="@+id/price_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/tv2"
+                    app:layout_constraintStart_toStartOf="@id/tv2"
+                    android:layout_marginTop="9dp"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:text="₹ 24,780.00"/>
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    app:layout_constraintTop_toTopOf="@id/price_2"
+                    app:layout_constraintBottom_toBottomOf="@id/price_2"
+                    app:layout_constraintEnd_toStartOf="@id/txt_percent_2"
+                    android:layout_marginEnd="4dp"
+                    android:src="@drawable/up_svg"/>
+                <TextView
+                    android:id="@+id/txt_percent_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="@id/price_2"
+                    android:text="8%"
+                    android:textSize="@dimen/H6"
+                    app:layout_constraintEnd_toEndOf="@id/img_info_2"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="9dp"
+            android:layout_weight="1"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="9dp"
+            app:cardElevation="6dp">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="9dp">
+                <TextView
+                    android:id="@+id/t3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:text="Avg. Lead Time"
+                    android:layout_margin="12dp"/>
+                <ImageView
+                    android:id="@+id/img_info3"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_margin="12dp"
+                    android:src="@drawable/svg_info"/>
+                <TextView
+                    android:id="@+id/price3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/t3"
+                    app:layout_constraintStart_toStartOf="@id/t3"
+                    android:layout_marginTop="9dp"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:text="₹ 24,780.00"/>
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    app:layout_constraintTop_toTopOf="@id/price3"
+                    app:layout_constraintBottom_toBottomOf="@id/price3"
+                    app:layout_constraintEnd_toStartOf="@id/txt_percent3"
+                    android:layout_marginEnd="4dp"
+                    android:src="@drawable/up_svg"/>
+                <TextView
+                    android:id="@+id/txt_percent3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="@id/price3"
+                    android:text="8%"
+                    android:textSize="@dimen/H6"
+                    app:layout_constraintEnd_toEndOf="@id/img_info3"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+</LinearLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv5"
+        android:layout_width="0dp"
+        android:layout_height="190dp"
+        app:layout_constraintTop_toBottomOf="@id/ll_quick"
+        android:layout_marginTop="9dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="12dp"
+        app:cardCornerRadius="6dp"
+        app:cardElevation="6dp"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv6"
+        android:layout_width="0dp"
+        android:layout_height="190dp"
+        app:layout_constraintTop_toBottomOf="@id/cv5"
+        android:layout_marginTop="9dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="12dp"
+        app:cardCornerRadius="6dp"
+        app:cardElevation="6dp"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv7"
+        android:layout_width="0dp"
+        android:layout_height="190dp"
+        app:layout_constraintTop_toBottomOf="@id/cv6"
+        android:layout_marginTop="9dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="12dp"
+        app:cardCornerRadius="6dp"
+        app:cardElevation="6dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
