--- a/app/src/main/res/layout/activity_dashboard_mobile.xml
+++ b/app/src/main/res/layout/activity_dashboard_mobile.xml
@@ -35,14 +35,40 @@
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/img_upload"
-                    android:layout_width="90dp"
+                    android:layout_width="45dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginStart="12dp"
-                    android:src="@drawable/svg_logo"/>
+                    android:src="@drawable/hms"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintStart_toEndOf="@id/img_upload"
+                    app:layout_constraintTop_toTopOf="@id/img_upload"
+                    android:gravity="start">
+                <TextView
+                    android:id="@+id/txt_hotel_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:text="Pink Hotel"
+                    android:textSize="@dimen/H5"
+                    android:fontFamily="@font/roboto_medium"/>
+                <TextView
+                    android:id="@+id/txt_cm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/txt_hotel_name"
+                    app:layout_constraintStart_toStartOf="@id/txt_hotel_name"
+                    android:text="Channel Manager"
+                    app:layout_constraintBottom_toBottomOf="@id/img_upload"/>
 
+                </LinearLayout>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/quick_reservation"
                     android:layout_width="wrap_content"
@@ -338,7 +364,14 @@
             android:layout_height="0dp"
             android:visibility="visible"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toTopOf="@id/bottom_nav"/>
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_nav"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:menu="@menu/menu"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -1469,7 +1502,6 @@
             </LinearLayout>
 
                 </LinearLayout>
-
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
