--- a/app/src/main/res/layout/fragment_rate_plan.xml
+++ b/app/src/main/res/layout/fragment_rate_plan.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".dashboard.configuration.roomsAndRates.RateType.RateTypeFragment">
+    tools:context=".dashboard.configuration.roomsAndRates.RatePlan.`RateP;anFragment`">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +16,7 @@
             android:id="@+id/aA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rate Types"
+            android:text="Rate Plan"
             android:fontFamily="@font/roboto_bold"
             android:textColor="@color/secondary"
             android:textSize="@dimen/H2"
