--- a/app/src/main/res/layout/fragment_create_rate_type.xml
+++ b/app/src/main/res/layout/fragment_create_rate_type.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fillViewport="true"
+    android:orientation="vertical"
     android:background="@color/secondaryBackground"
     tools:context=".dashboard.configuration.roomsAndRates.createRate.CreateRateTypeFragment">
 
@@ -68,16 +68,15 @@
 
         <LinearLayout
             android:id="@+id/dropDownLayout"
-            android:layout_width="0dp"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:visibility="gone"
             android:orientation="vertical"
             android:elevation="2dp"
             android:layout_marginHorizontal="5dp"
             android:background="@drawable/corner_bottom_white_background"
-            app:layout_constraintTop_toBottomOf="@id/rateTypeLayout"
-            app:layout_constraintStart_toStartOf="@id/rateTypeLayout"
-            app:layout_constraintEnd_toEndOf="@id/rateTypeLayout">
+            app:layout_constraintTop_toBottomOf="@id/ll7"
+            app:layout_constraintStart_toStartOf="@id/ll7">
 
             <LinearLayout
                 android:id="@+id/companyRateType"
@@ -314,20 +313,14 @@
 
         </LinearLayout>
 
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/ll7"
-            app:layout_constraintBottom_toBottomOf="parent">
-
             <FrameLayout
                 android:id="@+id/ratePlanFragContainer"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"/>
+                android:layout_height="0dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/ll7"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
-        </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
+</LinearLayout>
