--- a/app/src/main/res/layout/item_remaining_inventory.xml
+++ b/app/src/main/res/layout/item_remaining_inventory.xml
@@ -19,6 +19,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/roomType"
             style="@style/subHeadingTextBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -111,17 +112,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:cursorVisible="true"
-                android:inputType="number"
-                android:focusable="true"
-                android:maxLength="3"
-                android:focusableInTouchMode="true"
-                app:layout_constraintStart_toStartOf="@id/g1"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="1"
                 android:background="@drawable/inventory_edit_background"
-                android:text="6" />
+                android:cursorVisible="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="number"
+                android:maxLength="3"
+                android:text="6"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/g1"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/inventory_2"
