made every plus-minus buttons clickable in ChargesAndRatesFragment.

--- a/app/src/main/res/layout/fragment_charges_and_rates.xml
+++ b/app/src/main/res/layout/fragment_charges_and_rates.xml
@@ -86,6 +86,7 @@
                             android:textColor="@color/subtitle"
                             android:fontFamily="@font/roboto"/>
                         <TextView
+                            android:id="@+id/countMinimumRate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="₹ 1000.00"
@@ -156,6 +157,7 @@
                             android:textColor="@color/subtitle"
                             android:fontFamily="@font/roboto"/>
                         <TextView
+                            android:id="@+id/countBaseRate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="₹ 2500.00"
@@ -226,6 +228,7 @@
                             android:textColor="@color/subtitle"
                             android:fontFamily="@font/roboto"/>
                         <TextView
+                            android:id="@+id/countMaximumCharges"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="₹ 5000.00"
@@ -317,6 +320,7 @@
                             android:textColor="@color/subtitle"
                             android:fontFamily="@font/roboto"/>
                         <TextView
+                            android:id="@+id/countExtraAdultRate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="₹ 1500.00"
@@ -387,6 +391,7 @@
                             android:textColor="@color/subtitle"
                             android:fontFamily="@font/roboto"/>
                         <TextView
+                            android:id="@+id/countMaxChildRate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="₹ 600.00"
