-Solved the bug of LogsAndActivityFragment.

--- a/app/src/main/res/layout/fragment_logs_and_activity.xml
+++ b/app/src/main/res/layout/fragment_logs_and_activity.xml
@@ -137,13 +137,7 @@
                     android:id="@+id/g3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintGuide_percent="0.52"
-                    android:orientation="vertical"/>
-                <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/g4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintGuide_percent=".68"
+                    app:layout_constraintGuide_percent="0.6"
                     android:orientation="vertical"/>
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/g5"
@@ -193,16 +187,16 @@
                     android:fontFamily="@font/roboto_medium"
                     android:textSize="@dimen/H6"
                     android:textColor="@color/secondary"
-                    android:text="Arrival"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/g4"
-                    app:layout_constraintTop_toBottomOf="@id/card_icon"
-                    android:layout_marginTop="12dp"
-                    android:textSize="@dimen/H6"
-                    android:textColor="@color/secondary"
-                    android:text="Departure"/>
+                    android:text="Arrival / Departure"/>
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    app:layout_constraintStart_toStartOf="@id/g4"-->
+<!--                    app:layout_constraintTop_toBottomOf="@id/card_icon"-->
+<!--                    android:layout_marginTop="12dp"-->
+<!--                    android:textSize="@dimen/H6"-->
+<!--                    android:textColor="@color/secondary"-->
+<!--                    android:text="Departure"/>-->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -210,6 +204,7 @@
                     app:layout_constraintTop_toBottomOf="@id/card_icon"
                     android:layout_marginTop="12dp"
                     android:textSize="@dimen/H6"
+                    android:fontFamily="@font/roboto_medium"
                     android:textColor="@color/secondary"
                     android:text="Total"/>
 
